--- a/src/app/domain/login/Component/login-component/login-component.component.html
+++ b/src/app/domain/login/Component/login-component/login-component.component.html
@@ -1,30 +1,41 @@
-<form>
+<form [formGroup]="forms">
   <div class="title">
     <h2>Inicio de Sesión</h2>
   </div>
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Usuario</label>
-      <div class="row">
-        <div class="col">
-          <i class="fa-solid fa-user"></i>
-        </div>
-        <div class="col">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Usuario</label>
+    <div class="row">
+      <div class="col">
+        <i class="fa-solid fa-user"></i>
+      </div>
+      <div class="col">
+        <input
+        formControlName="email"
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+        />
       </div>
     </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-      <div class="row">
-        <div class="col">
-          <i class="fa-solid fa-key"></i>
-        </div>
-        <div class="col">
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+    <div class="row">
+      <div class="col">
+        <i class="fa-solid fa-key"></i>
+      </div>
+      <div class="col">
+        <input
+        formControlName="password"
+          type="password"
+          class="form-control"
+          id="exampleInputPassword1"
+        />
       </div>
     </div>
-    <div class="button">
-      <button type="submit" class="btn btn-primary">Entrar</button>
-    </div>
+  </div>
+  <div class="button">
+    <button type="submit" class="btn btn-primary" (click)="login(forms)">Entrar</button>
+  </div>
 </form>
